--- a/Client/src/app/modules/resources/subjects/add-subject/add-subject.component.html
+++ b/Client/src/app/modules/resources/subjects/add-subject/add-subject.component.html
@@ -34,7 +34,7 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxFlex="20%" fxFlex.lt-md="100%">
-            <input matInput type="number" formControlName="students" placeholder="Estudiantes">
+            <input min="1" matInput type="number" formControlName="students" placeholder="Estudiantes">
           </mat-form-field>
         </div>
       </div>
@@ -44,5 +44,5 @@
 </div>
 <div mat-dialog-actions class="pull-right">
   <button mat-raised-button (click)="close()" style="margin-right: 5px">Cancelar</button>
-  <button mat-raised-button [mat-dialog-close]="subjectForm.value" class="btn-success">Guardar</button>
+  <button mat-raised-button [mat-dialog-close]="subjectForm.value" class="btn-success" [disabled]="subjectForm.invalid">Guardar</button>
 </div>
