--- a/Client/src/app/modules/resources/buildings/classrooms/classroom-view/classroom-view.component.html
+++ b/Client/src/app/modules/resources/buildings/classrooms/classroom-view/classroom-view.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12">
         <h3 class="title">
-          Sala
+          Sala: {{classroom.name}}
         </h3>
       </div>
     </div>
